<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logistics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addr_book">地址簿</string>
    <string name="kuaidi_dashi">成为快递大使</string>
    <string name="complaints">投诉建议</string>
    <string name="quyu_jingli">成为区域经理</string>
    <string name="set">设置</string>
    <string name="kuaidi_chuan">入住快递窗</string>
    <string name="credit_value">信用值</string>
    <string name="index_order_num">输入订单号</string>
    <string name="index_login">登录</string>
    <string name="register">注册</string>
    <string name="check_num">获取验证码</string>
    <string name="reader">我已阅读并接受</string>
    <string name="service_item">《注册服务条款》</string>
    <string name="register_ins">立即注册</string>
    <string name="input_num">请输入手机号码</string>
    <string name="input_pass">请输入密码</string>
    <string name="instance_register">马上注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="da_shi">我是快递大使</string>
    <string name="jing_li">我是区域经理</string>
    <string name="reset_pass">重置密码</string>
    <string name="queren_reset">确认重置</string>
    <string name="search_result">搜索结果</string>
    <string name="order_num">运单号:</string>
    <string name="shipping_costs">运送费用</string>
    <string name="leave_message">给快递员捎句话</string>
    <string name="sender_info">寄件人信息</string>
    <string name="sender_address">寄件人地址</string>
    <string name="receiver_info">收件人信息</string>
    <string name="logistics_info">物流信息</string>
    <string name="order_time">下单时间</string>
    <string name="goods_info">货物信息</string>
    <string name="logistics_tracking">物流跟踪</string>
    <string name="scan_tips">请把条形码放入扫描框中进行扫描</string>
    <string name="scan">扫一扫</string>
    <string name="express_delivery">物流快递</string>
    <string name="nearby_services_window">附近服务窗</string>

</resources>