<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    android:orientation="vertical" >

    <include layout="@layout/include_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_input_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_57"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_phonenumber"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/input_num"
            android:inputType="phone"
            android:paddingLeft="@dimen/padding_26"
            android:textColorHint="@color/line_color"
            android:textSize="@dimen/font_size_18" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:layout_below="@id/et_input_num"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:background="@color/line_color" />

        <EditText
            android:id="@+id/et_input_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_57"
            android:layout_below="@id/line"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_password"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_26"
            android:textColorHint="@color/line_color"
            android:textSize="@dimen/font_size_18" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_46"
        android:layout_marginLeft="@dimen/font_size_16"
        android:layout_marginRight="@dimen/font_size_16"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/register_check_num_bg"
        android:gravity="center"
        android:text="@string/index_login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_ins_rigester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instance_register"
            android:textColor="@color/main_tab_color_1"
            android:textSize="@dimen/font_size_16" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/forget_pass"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_101"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_dashi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_13"
            android:drawableTop="@drawable/ico_courier"
            android:gravity="center"
            android:text="@string/da_shi"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_12" />

        <TextView
            android:id="@+id/tv_jingli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_13"
            android:drawableTop="@drawable/ico_manager"
            android:gravity="center"
            android:hint="@string/jing_li"
            android:textColorHint="@color/black"
            android:textSize="@dimen/font_size_12" />
    </LinearLayout>

</LinearLayout>