<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_containter"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_outside"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:background="@color/main_tab_color_1" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_8"
            android:src="@drawable/ico_back_white" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/scan"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_20" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/head_height"
            android:padding="13dp"
            android:text="登录"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15"
            android:visibility="gone" />
    </RelativeLayout>

    <SurfaceView
        android:id="@+id/capture_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_outside" />

    <ImageView
        android:id="@+id/top_mask"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/rl_outside"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/capture_crop_layout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/top_mask"
        android:layout_centerHorizontal="true"
        android:background="@drawable/capture"
        android:contentDescription="@string/app_name" >

        <ImageView
            android:id="@+id/capture_scan_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:background="@drawable/scan_line"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/bottom_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/capture_crop_layout"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/left_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_mask"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top_mask"
        android:layout_toLeftOf="@id/capture_crop_layout"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/right_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_mask"
        android:layout_alignParentRight="true"
        android:layout_below="@id/top_mask"
        android:layout_toRightOf="@id/capture_crop_layout"
        android:background="@drawable/scan_mask"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/capture_crop_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/scan_tips"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</RelativeLayout>